modified:   Docker.ipynb 	modified:   docker-compose.yml 	modified:   env 	new file:   images/container.png 	new file:   images/delete.png 	new file:   images/docker_dashbord.png 	modified:   images/remote_open.png 	new file:   images/restart.png

--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -24,6 +24,11 @@
     "\n",
     "\n",
     "メモリを6GB~10GBに設定しておくと動作も軽快で便利です  \n",
+    "\n",
+    "ダッシュボードを開く  \n",
+    "![図1.2 Dockerのメモリ設定](images/docker_dashbord.png)\n",
+    "\n",
+    "歯車マークを押して、設定画面へ移動する  \n",
     "![図1.2 Dockerのメモリ設定](images/docker_memory.png)"
    ]
   },
@@ -34,7 +39,7 @@
     "# 3. VsCodeからコンテナにアクセス\n",
     "VsCodeからコンテナにアクセスを行います(画面は変わったように見えないかもしれないですが変わっています)。\n",
     "\n",
-    "以下の画像のボタンからpyspark_settingsフォルダを選択します\n",
+    "以下の画像のボタンからbusiness_sql_courseフォルダを選択します\n",
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/docker-remote.png)\n",
     "\n",
@@ -45,8 +50,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# スタックしてしまった場合\n",
-    "お手数ですが何度か再起動をお願いいたします。"
+    "# MetaBaseにアクセスして、初期設定を行う\n",
+    "起動まで時間がかかりますが、1~2分ほどしたら\n",
+    "\n",
+    "http://localhost:3000\n",
+    "\n",
+    "にアクセスしてMETABASEを開きます\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# もし起動せず固まってしまった場合\n",
+    "お手数ですが以下の手順に沿って、作成し直しをお願いいたします。\n",
+    "\n",
+    "コンテナを削除する(以下の画像に写っている2つとも削除をお願いします)\n",
+    "\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/restart.png)\n",
+    "\n",
+    "「# 3. VsCodeからコンテナにアクセス」を再実行する"
    ]
   }
  ],
