modified:   Docker.ipynb new file:   images/metabase_setting1.png 	new file:   images/metabase_setting2.png 	new file:   images/metabase_setting3.png 	new file:   images/metabase_setting4.png 	new file:   images/metabase_setting5.png

--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -55,8 +55,21 @@
     "\n",
     "http://localhost:3000\n",
     "\n",
-    "にアクセスしてMETABASEを開きます\n",
-    "\n"
+    "にアクセスしてMETABASEを開きます。\n",
+    "\n",
+    "以下の画像の様に設定を行います。\n",
+    "\n",
+    "日本語を選択\n",
+    "\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting1.png)\n",
+    "\n",
+    "メールアドレスも含めて登録\n",
+    "\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting2.png)\n",
+    "\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting3.png)\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting4.png)\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting5.png)\n"
    ]
   },
   {
