Changes to be committed: 	modified:   Docker.ipynb 	modified:   docker-compose.yml 	new file:   sql/select.sql

--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -23,7 +23,7 @@
     "https://www.docker.com/get-started\n",
     "\n",
     "\n",
-    "メモリを6GB~10GBに設定しておくと動作も軽快で便利です  \n",
+    "メモリを6GB~16GBに設定しておくと動作も軽快で便利です  \n",
     "\n",
     "ダッシュボードを開く  \n",
     "![図1.2 Dockerのメモリ設定](images/docker_dashbord.png)\n",
@@ -67,9 +67,10 @@
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting2.png)\n",
     "\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting3.png)\n",
+    "\n",
     "「後でデータを追加する」を選択\n",
     "\n",
-    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting3.png)\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting4.png)\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting5.png)\n"
    ]
@@ -81,7 +82,7 @@
     "# もし起動せず固まってしまった場合\n",
     "お手数ですが以下の手順に沿って、作成し直しをお願いいたします。\n",
     "\n",
-    "コンテナを削除する(以下の画像に写っている2つとも削除をお願いします)\n",
+    "コンテナとディレクトリ内のmetabase-data及びpostgres-dataディレクトリ削除する(コンテナは画像に写っている2つとも削除をお願いします)\n",
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/restart.png)\n",
     "\n",
