modified:   Docker.ipynb 	modified:   docker-compose.yml 	new file:   images/postgres_setting.png 	new file:   posgreinit/init.sql 	modified:   sql/analysis.sql

--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -69,9 +69,12 @@
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting3.png)\n",
     "\n",
-    "「後でデータを追加する」を選択\n",
+    "「Postgresを選択する」\n",
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting4.png)\n",
+    "\n",
+    "パスワードはpassowrdです。\n",
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/postgres_setting.png)\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting5.png)\n"
    ]
   },
