modified:   Docker.ipynb 	modified:   README.md 	modified:   sql/science.sql

--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -39,6 +39,8 @@
     "# 3. VsCodeからコンテナにアクセス\n",
     "VsCodeからコンテナにアクセスを行います(画面は変わったように見えないかもしれないですが変わっています)。\n",
     "\n",
+    "慣れている方は、business_sql_courseフォルダ内でdocker-compose up -d　でも問題ありません\n",
+    "\n",
     "以下の画像のボタンからbusiness_sql_courseフォルダを選択します\n",
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/docker-remote.png)\n",
@@ -51,7 +53,7 @@
    "metadata": {},
    "source": [
     "# MetaBaseにアクセスして、初期設定を行う\n",
-    "起動まで時間がかかりますが、1~2分ほどしたら\n",
+    "起動まで時間がかかりますが、5分ほどしたら\n",
     "\n",
     "http://localhost:3000\n",
     "\n",
@@ -69,13 +71,24 @@
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting3.png)\n",
     "\n",
-    "「Postgresを選択する」\n",
+    "「PostgresSQLを選択する」\n",
     "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting4.png)\n",
     "\n",
     "パスワードはpassowrdです。\n",
+    "表示名は適当で構いません。\n",
+    "\n",
+    "それ以外は以下をそれぞれ入力します。\n",
+    "\n",
+    "- db\n",
+    "- metabase\n",
+    "- postgres\n",
+    "\n",
     "![図1.2 VsCodeからコンテナにリモート接続します](images/postgres_setting.png)\n",
-    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting5.png)\n"
+    "![図1.2 VsCodeからコンテナにリモート接続します](images/metabase_setting5.png)\n",
+    "\n",
+    "\n",
+    "準備は完了です。"
    ]
   },
   {
