--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -4,6 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Gitのインストール\n",
+    "\n",
+    "以下より、お使いの端末に合わせてインストールください。\n",
+    "\n",
+    "https://git-scm.com/book/ja/v2/%E4%BD%BF%E3%81%84%E5%A7%8B%E3%82%81%E3%82%8B-Git%E3%81%AE%E3%82%A4%E3%83%B3%E3%82%B9%E3%83%88%E3%83%BC%E3%83%AB\n",
+    "\n",
+    "gitをインストールしたら、フォルダを作成し以下のコマンドをターミナル(or コマンドプロンプトで実行します)\n",
+    "\n",
+    "```\n",
+    "git clone https://github.com/yk-st/business_sql_course.git\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Vsodeのインストール\n",
     "お使いのインストーラーをダウンロードしてインストールしてください   \n",
     "https://code.visualstudio.com/download\n",
