modified:   Docker.ipynb

--- a/Docker.ipynb
+++ b/Docker.ipynb
@@ -41,23 +41,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. VsCodeからコンテナにアクセス\n",
-    "VsCodeからコンテナにアクセスを行います(画面は変わったように見えないかもしれないですが変わっています)。\n",
-    "\n",
-    "慣れている方は、business_sql_courseフォルダ内でdocker-compose up -d　でも問題ありません\n",
-    "\n",
-    "以下の画像のボタンからbusiness_sql_courseフォルダを選択します\n",
-    "\n",
-    "![図1.2 VsCodeからコンテナにリモート接続します](images/docker-remote.png)\n",
-    "\n",
-    "![図1.2 VsCodeからコンテナにリモート接続します](images/remote_open.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# MetaBaseにアクセスして、初期設定を行う\n",
+    "\n",
+    "ターミナルで\n",
+    "\n",
+    "docker-compose up -d\n",
+    "\n",
     "起動まで時間がかかりますが、5分ほどしたら\n",
     "\n",
     "http://localhost:3000\n",
